<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/companyContainer">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="131dp"
        android:id="@+id/editTextCompany"
        android:hint="@string/company_name"
        android:textCursorDrawable="@color/black"
        android:textColorLink="@color/black"
        android:textColorHighlight="@color/black" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="13dp"
        android:id="@+id/editTextBranch"
        android:layout_below="@+id/editTextCompany"
        android:layout_alignStart="@+id/editTextCompany"
        android:hint="@string/branch_name"
        android:textCursorDrawable="@color/black"
        android:textColorLink="@color/black" />

    <TextView
        android:text="@string/title_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:id="@+id/textView9"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editTextCompany" />

    <Button
        android:text="@string/accept_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextBranch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:id="@+id/companyAcceptButton" />
</RelativeLayout>