<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/exit_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/find_jobs_button_shape">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/exit"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/exit_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/dialogAccpet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView10"
        android:layout_marginTop="26dp"
        android:layout_toEndOf="@+id/textView5"
        android:background="@android:color/transparent"
        android:text="@string/accept"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/dialogCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dialogAccpet"
        android:layout_alignBottom="@+id/dialogAccpet"
        android:layout_toStartOf="@+id/textView5"
        android:background="@android:color/transparent"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="invisible"
        android:layout_below="@+id/dialogAccpet"
        android:layout_alignParentStart="true" />

</RelativeLayout>