<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky_4"
    tools:context="com.hyperactive.shilo.jobimshilo.main_desktop_jobs.DetailsJobActivity">

    <RelativeLayout
        android:id="@+id/relativeLayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/exitActivity">

        <TextView
            android:id="@+id/company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="company name"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/textViewsearch" />

        <TextView
            android:id="@+id/textViewsearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_below="@+id/company"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/kindOfJob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="kind of job"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_below="@+id/textViewsearch"
            android:layout_toStartOf="@+id/textViewsearch" />

        <TextView
            android:id="@+id/TitleOfJob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="131dp"
            android:layout_below="@+id/kindOfJob"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/contentOfJob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="16sp"
            android:layout_centerInParent="true"
            android:layout_below="@+id/TitleOfJob"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutContent"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/relativeLayoutTitle"
        android:layout_alignParentStart="true">

        <ImageButton
            android:id="@+id/SendSMS"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/sms_1"
            android:layout_marginStart="59dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <ImageButton
            android:id="@+id/PhoneCall"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignTop="@+id/SendSMS"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/phone" />

        <ImageButton
            android:id="@+id/SendMail"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/mail"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/PhoneCall"
            android:layout_marginStart="52dp" />

        <ImageButton
            android:id="@+id/rateStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/star_selector"
            android:layout_marginBottom="28dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="56dp"
            android:layout_marginTop="43dp"
            android:text="@string/send_mail" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView13"
            android:layout_centerHorizontal="true"
            android:text="@string/call_phone" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView15"
            android:layout_alignBottom="@+id/textView15"
            android:layout_alignParentStart="true"
            android:layout_marginStart="35dp"
            android:text="@string/send_sms" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutMap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayoutContent"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_map_view">

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapViewActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <RelativeLayout
            android:id="@+id/relativeLayoutDistance"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="7dp"
            android:background="@color/white_transparent">

            <TextView
                android:id="@+id/textViewLocationA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="21dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewDistanceA"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="14dp"
                android:fadingEdgeLength="10dp"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_map_view"
            android:orientation="vertical">

        </RelativeLayout>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/exitActivity"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <TextView
        android:id="@+id/cover_up"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/relativeLayoutMap"
        android:layout_toEndOf="@+id/exitActivity"
        android:background="@color/black" />

    <TextView
        android:id="@+id/cover_down"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@color/black"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/cover_right"
        android:layout_width="7dp"
        android:layout_height="187dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@color/black" />

    <TextView
        android:id="@+id/cover_left"
        android:layout_width="7dp"
        android:layout_height="187dp"
        android:background="@color/black"
        android:layout_alignBaseline="@+id/cover_up"
        android:layout_alignBottom="@+id/cover_up"
        android:layout_alignParentStart="true" />

</RelativeLayout>
